--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.7",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@rollup/pluginutils": "^5.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -59,40 +62,29 @@
     "bundlesize": "^0.18.1",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^8.44.0",
+    "husky": "^8.0.0",
     "jest": "^29.6.1",
     "prettier": "^3.0.0",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "rollup": "^3.26.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm test"
-    }
   },
   "bundlesize": [
     {
       "path": "./dist/use-font-from-content.min.es.js",
       "maxSize": "5 kB"
     }
-  ],
-  "dependencies": {
-    "@babel/eslint-parser": "^7.22.7",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.2"
-  }
+  ]
 }
