--- a/package.json
+++ b/package.json
@@ -62,21 +62,22 @@
     "bundlesize": "^0.18.1",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint": "^8.44.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "^3.0.0",
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.26.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
