--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "allowJs": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
