--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.26.2",
+    "rollup-plugin-banner2": "^1.2.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
