--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "unpkg": "dist/react-content-font.umd.js",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "npm run build:modern && npm run build:min && npm run copyfiles",
+    "build": "npm run build:modern && npm run build:min",
     "build:modern": "rollup  --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "build:min": "rollup --config rollup.min.config.ts --configPlugin @rollup/plugin-typescript",
     "bundlesize": "yarn build:min && bundlesize",
     "clean": "rm -rf dist",
-    "copyfiles": "copyfiles -f src/types.d.ts dist",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint --ext .ts,.tsx ./src",
     "format": "prettier --write \"src/*.ts\"",
@@ -61,7 +60,6 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "bundlesize": "^0.18.1",
-    "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
